# nav_usv

./: imu_gps_2024-04-24-18-14-38.bag
.VSCodeCounter/2024-03-23_16-20-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-23_16-22-22/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-25_17-37-43/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-26_11-17-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-03-27_14-12-06/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/nav_core/: pos_vel_att_msg.h  remote_control_msg.h  sbus_channels_msg.h
devel/lib/nav_core/: ekf_nav_update_node  imu_gps_node  nav_usv_core_control_node  remote_data_node  sbus_simulate_node
devel/lib/pkgconfig/: nav_core.pc
devel/lib/python3/dist-packages/nav_core/msg/: __init__.py  _pos_vel_att_msg.py  _remote_control_msg.py  _sbus_channels_msg.py
devel/share/common-lisp/ros/nav_core/msg/: _package.lisp  _package_pos_vel_att_msg.lisp  _package_remote_control_msg.lisp  _package_sbus_channels_msg.lisp  nav_core-msg.asd  pos_vel_att_msg.lisp  remote_control_msg.lisp  sbus_channels_msg.lisp
devel/share/gennodejs/ros/nav_core/msg/: _index.js  pos_vel_att_msg.js  remote_control_msg.js  sbus_channels_msg.js
devel/share/nav_core/cmake/: nav_core-msg-paths.cmake  nav_coreConfig.cmake
devel/share/roseus/ros/nav_core/: manifest.l
devel/share/roseus/ros/nav_core/msg/: pos_vel_att_msg.l  remote_control_msg.l  sbus_channels_msg.l
src/: README.md
src/nav_core/: CMakeLists.txt  package.xml
src/nav_core/include/kf_gins/: EKFImuGnss.hpp  EKF_types.hpp  InsMech.hpp  Rotation.hpp  earth.hpp
src/nav_core/include/nav_core/: ImuGpsReceive.hpp  NavUSVcontrol.hpp  RemoteControlParser.hpp  SbusSimulate.hpp
src/nav_core/launch/: start_up.launch
src/nav_core/msg/: pos_vel_att_msg.msg  remote_control_msg.msg
src/nav_core/node/: EKFNavUpdateNode.cpp  ImuGpsReceiveNode.cpp  NavUSVcontrolNode.cpp  RemoteDataNode.cpp  SbusSimulateOutputNode.cpp
src/nav_core/params/: kf-gins.yaml
src/nav_core/src/: EKFImuGnss.cpp  ImuGpsReceive.cpp  NavUSVcontrol.cpp  RemoteControlParser.cpp  SbusSimulate.cpp
